4-example-project/kubernetes/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-in-kubernetes-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: laravel-project
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-in-kubernetes-webserver
                port:
                  number: 80
